# apps/backend/openapi.json
@@ -365,6 +365,7 @@
           "name",
           "polarity",
           "position",
+          "isPrivate",
           "createdAt",
           "editedAt",
           "deletedAt"
@@ -384,6 +385,9 @@
           "position": {
             "type": "integer",
             "format": "int32"
+          },
+          "isPrivate": {
+            "type": "boolean"
           },
           "createdAt": {
             "type": "integer",
